k8s/gtp5g-installer.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: gtp5g-installer
  namespace: kube-system
  labels:
    app.kubernetes.io/name: gtp5g-installer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gtp5g-installer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gtp5g-installer
    spec:
      hostPID: true
      hostNetwork: true
      tolerations:
        - operator: Exists
      containers:
        - name: installer
          image: public.ecr.aws/amazonlinux/amazonlinux:2023
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          volumeMounts:
            - name: host-root
              mountPath: /host
          command:
            - /bin/bash
            - -lc
            - |
              [...]
      volumes:
        - name: host-root
          hostPath:
            path: /
